# arbiter

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  vercel.json
agent/: .env  .gitignore  README.md  env.example  package-lock.json  package.json  tsconfig.json
agent-rs/: Cargo.toml  README.md
agent-rs/src/: main.rs  prover.rs  yields.rs
agent/src/: agent.ts
agent/src/tools/: optimize.ts  proofGateState.ts  prove.ts  routerCalls.ts  tx.ts  yields.ts
agent/test/: _env.ts  e2e.ts  smoke.ts
contracts/: foundry.toml
contracts/script/: ConfigureRouter.s.sol  DeployArbiterUSDC.s.sol  DeployProofGateStack.s.sol
contracts/src/: Router.sol  Vault.sol  VaultFactory.sol  Verifier.sol
contracts/src/interfaces/: IVerifier.sol
contracts/src/libraries/: Clones.sol  ProtocolIds.sol
contracts/src/mocks/: ArbiterUSDC.sol
contracts/src/safe/: ProofGateSafeModule.sol
contracts/src/verifiers/: Groth16VerifierAdapter.sol  PolicyGroth16Verifier.sol
contracts/test/: RouterProtocolIntegration.t.sol  SafeProofGate.t.sol  Vault.t.sol  ZkE2E.t.sol
contracts/test/mocks/: MockVerifier.sol
docker/: agent-test.Dockerfile
frontend/: .gitignore  env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AgniTokenBreakdown.tsx  ArbiterLogo.tsx  ConnectWalletButton.tsx  DeployVaultModal.tsx  FundAgentForm.tsx  HomeHeroCta.tsx  LoadingSpinner.tsx  (+12 more)
zk/: README.md  package-lock.json  package.json
zk/circuits/: policy.circom
zk/scripts/: build_groth16.sh  prove.mjs
(+18 files in other folders)
